# satsignal-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/satsignal/: __init__.py  api.py  bundle.py  cli.py  config.py  headers.py  log.py  p2p.py  spv.py  verify.py
tests/: test_chain_forgery_classification.py  test_cli_dry_run_and_folder_label.py  test_cli_spv_reclassify.py  test_folder_alias.py  test_headers_validation.py  test_p2p_framing.py  test_spv_merkle.py
